Fix vertical align of the "..." button on tablets

--- a/src/scss/components/_touch-footer.scss
+++ b/src/scss/components/_touch-footer.scss
@@ -13,4 +13,8 @@
 	&.darker {
 		background-color: $touch-footer-darker-bg;
 	}
+
+	.dropdown .btn-icon {
+		height: 100%;
+	}
 }
